--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html -- --public-url=/goit-js-hw-10-food-service/",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
     "deploy": "gh-pages -d dist",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build -- --public-url=/goit-js-hw-10-food-service/"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,6 @@
   },
   "homepage": "https://mrpembroke.github.io/goit-js-hw-10-food-service",
   "devDependencies": {
-    "nodemon": "^2.0.5",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-custom-dist-structure": "^1.1.16",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
@@ -43,4 +42,3 @@
     "gh-pages": "^3.1.0"
   }
 }
-
