--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/",
+    "build": "parcel build src/*.html",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build -- --public-url=/goit-js-hw-10-food-service/"
   },
