--- a/package.json
+++ b/package.json
@@ -24,19 +24,7 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-custom-dist-structure": "^1.1.16",
-    "parcel-plugin-handlebars-precompile": "^1.0.2",
-    "parcel-plugin-nuke-dist": "^1.0.1"
-  },
-  "customDistStructure": {
-    "config": {
-      ".css": "css",
-      ".js": "js",
-      "images": [
-        ".jpg",
-        ".svg",
-        ".png"
-      ]
-    }
+    "parcel-plugin-handlebars-precompile": "^1.0.2"
   },
   "dependencies": {
     "gh-pages": "^3.1.0"
