--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "homepage": "https://mrpembroke.github.io/goit-js-hw-10-food-service",
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-custom-dist-structure": "^1.1.16",
-    "parcel-plugin-handlebars-precompile": "^1.0.2"
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-plugin-nuke-dist": "^1.0.1"
   },
   "dependencies": {
     "gh-pages": "^3.1.0"
